--- a/about.html
+++ b/about.html
@@ -13,44 +13,63 @@
 </head>
 <body>
 
-    <div class="top-bar">
-        <div class="container d-flex justify-content-between align-items-center">
-            <div class="top-info">
-                <span><i class="fas fa-phone-alt"></i> +91 123 456 7890</span>
-                <span><i class="fas fa-envelope"></i> info@BhaktiVedant.com</span>
+   <div class="top-bar">
+    <div class="container d-flex justify-content-between align-items-center">
+        <div class="top-info">
+            <span><i class="fas fa-phone-alt"></i> +91 83808 43242</span>
+            <span><i class="fas fa-envelope"></i> info@BhaktiVedant.com</span>
+        </div>
+        <div class="top-info d-none d-md-block">
+            <span><i class="far fa-clock"></i> Mon - Sat: 8:00 AM - 9:00 PM</span>
+            <a href="#" class="text-white ms-2"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-white ms-2"><i class="fab fa-instagram"></i></a>
+        </div>
+    </div>
+</div>
+
+<nav class="navbar navbar-expand-lg hospital-nav sticky-top">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <div class="brand-icon-box">
+                <img src="dd.png" width="100%" alt="">
             </div>
-            <div class="top-info d-none d-md-block">
-                <span><i class="far fa-clock"></i> Mon - Sat: 8:00 AM - 9:00 PM</span>
-                <a href="#" class="text-white ms-2"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="text-white ms-2"><i class="fab fa-instagram"></i></a>
+            <span>Bhakti<span style="color: #00a8cc;">Vedant</span></span>
+        </a>
+
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+            <span class="fas fa-bars text-primary"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarContent">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="facility.html">Facilities</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+
+            <div class="d-flex align-items-center flex-column flex-lg-row">
+                <a href="tel:102" class="btn-emergency">
+                    <i class="fas fa-circle pulse-icon"></i> Emergency
+                </a>
+                <a href="appointment.html" class="btn-book">
+                    Book Appointment
+                </a>
             </div>
         </div>
     </div>
-
-    <nav class="navbar navbar-expand-lg hospital-nav sticky-top fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <div class="brand-icon-box"><i class="fas fa-plus"></i></div>
-                <span>Bhakti<span style="color: #00a8cc;">Vedant</span></span>
-            </a>
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-                <span class="fas fa-bars text-primary"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarContent">
-                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="about.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="facility.html">Facilities</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                </ul>
-                <div class="d-flex align-items-center flex-column flex-lg-row">
-                    <a href="tel:102" class="btn-emergency"><i class="fas fa-circle pulse-icon"></i> Emergency</a>
-                    <a href="appointment.html" class="btn-book">Book Appointment</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+</nav>
     <header class="page-header">
         <div class="container">
             <h1 class="display-3 fw-bold mb-2">About BhaktiVedant</h1>
@@ -185,7 +204,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="https://images.unsplash.com/photo-1622253692010-333f2da6031d?auto=format&fit=crop&q=80&w=600" class="director-img shadow" alt="Director">
+                    <img src="/images/profile.jpeg" class="director-img shadow" alt="Director">
                 </div>
                 <div class="col-lg-8">
                     <div class="director-card">
@@ -194,10 +213,10 @@
                         <p class="fs-5 mt-3 mb-4" style="line-height: 1.8;">"Medicine is not just about prescriptions and surgeries; it is about hope, trust, and human connection. At BhaktiVedant, we wake up every day with one goal: to be the reason someone smiles again. We have built this institution on the pillars of transparency and clinical excellence. When you walk through our doors, you are not just a patient; you are our responsibility."</p>
                         <div class="d-flex align-items-center justify-content-between border-top pt-4" style="border-color: rgba(255,255,255,0.2) !important;">
                             <div>
-                                <h4 class="mb-0 fw-bold">Dr. Rajesh Verma</h4>
+                                <h4 class="mb-0 fw-bold">Dr. P. S. Bavdankar</h4>
                                 <small class="text-light opacity-75">MBBS, MD (Cardiology) | Chief Medical Director</small>
                             </div>
-                            <div class="signature">Dr. Rajesh Verma</div>
+                            <div class="signature">Dr. P. S. Bavdankar</div>
                         </div>
                     </div>
                 </div>
@@ -205,7 +224,7 @@
         </div>
     </section>
 
-    <section class="cert-section">
+    <section class="cert-section mb-5">
         <div class="container">
             <div class="text-center mb-5">
                 <p class="highlight-text mb-2">Credibility</p>
