--- a/facility.html
+++ b/facility.html
@@ -12,37 +12,63 @@
 </head>
 <body>
 
-    <div class="top-bar">
-        <div class="container d-flex justify-content-between align-items-center">
-            <div class="top-info"><span><i class="fas fa-phone-alt"></i> +91 123 456 7890</span> <span><i class="fas fa-envelope"></i> info@BhaktiVedant.com</span></div>
-            <div class="top-info d-none d-md-block"><span><i class="far fa-clock"></i> Mon - Sat: 8:00 AM - 9:00 PM</span></div>
+     <div class="top-bar">
+    <div class="container d-flex justify-content-between align-items-center">
+        <div class="top-info">
+            <span><i class="fas fa-phone-alt"></i> +91 83808 43242</span>
+            <span><i class="fas fa-envelope"></i> info@BhaktiVedant.com</span>
+        </div>
+        <div class="top-info d-none d-md-block">
+            <span><i class="far fa-clock"></i> Mon - Sat: 8:00 AM - 9:00 PM</span>
+            <a href="#" class="text-white ms-2"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-white ms-2"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
+</div>
 
-    <nav class="navbar navbar-expand-lg hospital-nav sticky-top fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <div class="brand-icon-box"><i class="fas fa-plus"></i></div>
-                <span>Bhakti<span style="color: var(--secondary-color);">Vedant</span></span>
-            </a>
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-                <span class="fas fa-bars text-primary"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarContent">
-                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="facility.html">Facilities</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                </ul>
-                <div class="d-flex align-items-center flex-column flex-lg-row">
-                    <a href="tel:102" class="btn-emergency"><i class="fas fa-circle pulse-icon"></i> Emergency</a>
-                    <a href="appointment.html" class="btn-book">Book Appointment</a>
-                </div>
+<nav class="navbar navbar-expand-lg hospital-nav sticky-top">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <div class="brand-icon-box">
+                <img src="dd.png" width="100%" alt="">
+            </div>
+            <span>Bhakti<span style="color: #00a8cc;">Vedant</span></span>
+        </a>
+
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+            <span class="fas fa-bars text-primary"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarContent">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="facility.html">Facilities</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+
+            <div class="d-flex align-items-center flex-column flex-lg-row">
+                <a href="tel:102" class="btn-emergency">
+                    <i class="fas fa-circle pulse-icon"></i> Emergency
+                </a>
+                <a href="appointment.html" class="btn-book">
+                    Book Appointment
+                </a>
             </div>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <header class="page-header">
         <div class="container">
@@ -148,7 +174,7 @@
         </div>
     </section>
 
-    <section class="container py-5">
+    <section class="container py-5 mb-5">
         <div class="text-center mb-5">
             <span class="badge-pill">Gallery</span>
             <h2 class="fw-bold text-primary">A Tour of BhaktiVedant</h2>
@@ -157,32 +183,44 @@
         <div class="row g-3">
             <div class="col-md-4 col-sm-6">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1581594693702-fbdc51b2763b?auto=format&fit=crop&q=80&w=600" alt="Reception">
-                    <div class="gallery-overlay"><span class="gallery-text">Reception</span></div>
+                    <img src="/images/celebration.jpg" alt="Reception">
+                    <div class="gallery-overlay"><span class="gallery-text"></span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1516549655169-df83a0774514?auto=format&fit=crop&q=80&w=600" alt="Emergency">
-                    <div class="gallery-overlay"><span class="gallery-text">Emergency</span></div>
+                    <img src="/images/celebration2.jpeg" alt="Emergency">
+                    <div class="gallery-overlay"><span class="gallery-text"></span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1579684385127-1ef15d508118?auto=format&fit=crop&q=80&w=600" alt="Lab">
-                    <div class="gallery-overlay"><span class="gallery-text">Laboratory</span></div>
+                    <img src="/images/in1.jpeg" alt="Lab">
+                    <div class="gallery-overlay"><span class="gallery-text"></span></div>
                 </div>
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?auto=format&fit=crop&q=80&w=800" alt="OT">
-                    <div class="gallery-overlay"><span class="gallery-text">Operation Theatre</span></div>
+                    <img src="/images/out1.jpeg" alt="OT">
+                    <div class="gallery-overlay"><span class="gallery-text"></span></div>
                 </div>
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1538108149393-fbbd81895907?auto=format&fit=crop&q=80&w=800" alt="Ward">
-                    <div class="gallery-overlay"><span class="gallery-text">Patient Ward</span></div>
+                    <img src="/images/out2.jpeg" alt="Ward">
+                    <div class="gallery-overlay"><span class="gallery-text"></span></div>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-6">
+                <div class="gallery-item">
+                    <img src="/images/services.jpeg"  alt="Ward">
+                    <div class="gallery-overlay"><span class="gallery-text"></span></div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="gallery-item">
+                    <img src="/images/side.jpeg" alt="Reception">
+                    <div class="gallery-overlay"><span class="gallery-text"></span></div>
                 </div>
             </div>
         </div>
