--- a/appointment.html
+++ b/appointment.html
@@ -14,37 +14,62 @@
 <body>
 
     <div class="top-bar">
-        <div class="container d-flex justify-content-between align-items-center">
-            <div class="top-info"><span><i class="fas fa-phone-alt"></i> +91 123 456 7890</span> <span><i class="fas fa-envelope"></i> info@BhaktiVedant.com</span></div>
-            <div class="top-info d-none d-md-block"><span><i class="far fa-clock"></i> Mon - Sat: 8:00 AM - 9:00 PM</span></div>
+    <div class="container d-flex justify-content-between align-items-center">
+        <div class="top-info">
+            <span><i class="fas fa-phone-alt"></i> +91 83808 43242</span>
+            <span><i class="fas fa-envelope"></i> info@BhaktiVedant.com</span>
+        </div>
+        <div class="top-info d-none d-md-block">
+            <span><i class="far fa-clock"></i> Mon - Sat: 8:00 AM - 9:00 PM</span>
+            <a href="#" class="text-white ms-2"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-white ms-2"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
+</div>
 
-    <nav class="navbar navbar-expand-lg hospital-nav sticky-top fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <div class="brand-icon-box"><i class="fas fa-plus"></i></div>
-                <span>Bhakti<span style="color: var(--secondary-color);">Vedant</span></span>
-            </a>
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-                <span class="fas fa-bars text-primary"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarContent">
-                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="facility.html">Facilities</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                </ul>
-                <div class="d-flex align-items-center flex-column flex-lg-row">
-                    <a href="tel:102" class="btn-emergency"><i class="fas fa-circle pulse-icon"></i> Emergency</a>
-                    <a href="appointment.html" class="btn-book">Book Appointment</a>
-                </div>
+<nav class="navbar navbar-expand-lg hospital-nav sticky-top">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <div class="brand-icon-box">
+                <img src="dd.png" width="100%" alt="">
+            </div>
+            <span>Bhakti<span style="color: #00a8cc;">Vedant</span></span>
+        </a>
+
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+            <span class="fas fa-bars text-primary"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarContent">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="facility.html">Facilities</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+
+            <div class="d-flex align-items-center flex-column flex-lg-row">
+                <a href="tel:102" class="btn-emergency">
+                    <i class="fas fa-circle pulse-icon"></i> Emergency
+                </a>
+                <a href="appointment.html" class="btn-book">
+                    Book Appointment
+                </a>
             </div>
         </div>
-    </nav>
-
+    </div>
+</nav>
     <header class="page-header">
         <div class="container">
             <h1 class="display-3 fw-bold">Book an Appointment</h1>
