--- a/contact.html
+++ b/contact.html
@@ -13,37 +13,63 @@
 </head>
 <body>
 
-    <div class="top-bar">
-        <div class="container d-flex justify-content-between align-items-center">
-            <div class="top-info"><span><i class="fas fa-phone-alt"></i> +91 123 456 7890</span> <span><i class="fas fa-envelope"></i> info@BhaktiVedant.com</span></div>
-            <div class="top-info d-none d-md-block"><span><i class="far fa-clock"></i> Mon - Sat: 8:00 AM - 9:00 PM</span></div>
+      <div class="top-bar">
+    <div class="container d-flex justify-content-between align-items-center">
+        <div class="top-info">
+            <span><i class="fas fa-phone-alt"></i> +91 83808 43242</span>
+            <span><i class="fas fa-envelope"></i> info@BhaktiVedant.com</span>
+        </div>
+        <div class="top-info d-none d-md-block">
+            <span><i class="far fa-clock"></i> Mon - Sat: 8:00 AM - 9:00 PM</span>
+            <a href="#" class="text-white ms-2"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-white ms-2"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
+</div>
 
-    <nav class="navbar navbar-expand-lg hospital-nav sticky-top fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <div class="brand-icon-box"><i class="fas fa-plus"></i></div>
-                <span>Bhakti<span style="color: var(--secondary-color);">Vedant</span></span>
-            </a>
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-                <span class="fas fa-bars text-primary"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarContent">
-                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="facility.html">Facilities</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
-                </ul>
-                <div class="d-flex align-items-center flex-column flex-lg-row">
-                    <a href="tel:102" class="btn-emergency"><i class="fas fa-circle pulse-icon"></i> Emergency</a>
-                    <a href="appointment.html" class="btn-book">Book Appointment</a>
-                </div>
+<nav class="navbar navbar-expand-lg hospital-nav sticky-top">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <div class="brand-icon-box">
+                <img src="dd.png" width="100%" alt="">
+            </div>
+            <span>Bhakti<span style="color: #00a8cc;">Vedant</span></span>
+        </a>
+
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+            <span class="fas fa-bars text-primary"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarContent">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="facility.html">Facilities</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+
+            <div class="d-flex align-items-center flex-column flex-lg-row">
+                <a href="tel:102" class="btn-emergency">
+                    <i class="fas fa-circle pulse-icon"></i> Emergency
+                </a>
+                <a href="appointment.html" class="btn-book">
+                    Book Appointment
+                </a>
             </div>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <header class="page-header">
         <div class="container">
@@ -58,14 +84,14 @@
                 <div class="contact-card">
                     <div class="icon-circle"><i class="fas fa-map-marker-alt"></i></div>
                     <h4>Our Location</h4>
-                    <p class="text-muted mb-0">123 Health Avenue, Medical District,<br>Mumbai, Maharashtra - 400001</p>
+                    <p class="text-muted mb-0">Shop No 01, Ashti Doithan Road, <br>Bavi, Kohini, Maharashtra 4142081</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="contact-card">
                     <div class="icon-circle"><i class="fas fa-phone-volume"></i></div>
                     <h4>Contact Number</h4>
-                    <p class="text-muted mb-0"><strong>Main:</strong> +91 123 456 7890<br><strong>Ambulance:</strong> +91 987 654 3210</p>
+                    <p class="text-muted mb-0"><strong>Main:</strong> +91 83808 43242<br><strong>Reception:</strong> +91 987 654 3210</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -121,7 +147,8 @@
 
                 <div class="col-lg-6">
                     <div class="map-container">
-                        <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30711.02672049962!2d73.8567!3d18.5204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bf2e67461101%3A0x828d43bf9d9ee124!2sPune%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1645523456789!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3415.2194017074485!2d75.18269335661486!3d18.934036973005565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc4b380ea1ae96b%3A0xeea5c2eabbf3205d!2sBHAKTI%20VEDANT%20MULTISPECALITY%20HOSPITAL!5e1!3m2!1sen!2sin!4v1765257013536!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+                        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3415.2194017074485!2d75.18269335661486!3d18.934036973005565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc4b380ea1ae96b%3A0xeea5c2eabbf3205d!2sBHAKTI%20VEDANT%20MULTISPECALITY%20HOSPITAL!5e1!3m2!1sen!2sin!4v1765257013536!5m2!1sen!2sin" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
                     </div>
                 </div>
             </div>
@@ -187,7 +214,7 @@
         </div>
     </section>
 
-    <section class="emergency-strip">
+    <section class="emergency-strip ">
         <div class="container position-relative z-2">
             <h1 class="display-4 fw-bold mb-3"><i class="fas fa-ambulance"></i> Emergency?</h1>
             <h3 class="mb-4">Call our 24/7 Trauma Hotline immediately</h3>
