--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <div class="top-bar">
     <div class="container d-flex justify-content-between align-items-center">
         <div class="top-info">
-            <span><i class="fas fa-phone-alt"></i> +91 123 456 7890</span>
-            <span><i class="fas fa-envelope"></i> info@Bhakti Vedant.com</span>
+            <span><i class="fas fa-phone-alt"></i> +91 83808 43242</span>
+            <span><i class="fas fa-envelope"></i> info@BhaktiVedant.com</span>
         </div>
         <div class="top-info d-none d-md-block">
             <span><i class="far fa-clock"></i> Mon - Sat: 8:00 AM - 9:00 PM</span>
@@ -36,7 +36,7 @@
     <div class="container">
         <a class="navbar-brand" href="index.html">
             <div class="brand-icon-box">
-                <i class="fas fa-plus"></i>
+                <img src="dd.png" width="100%" alt="">
             </div>
             <span>Bhakti<span style="color: #00a8cc;">Vedant</span></span>
         </a>
@@ -342,7 +342,7 @@
 
 
 
-<section class="speech-bubble-section">
+<section class="speech-bubble-section mb-5">
     <div class="container">
         <div class="text-center mb-5">
              <h2 style="font-weight: 800; color: #0056b3;">Patient Feedback</h2>
@@ -398,83 +398,66 @@
 
 
 
-<footer class="mega-footer">
-    <svg class="footer-wave" viewBox="0 0 1440 320">
-        <path fill-opacity="1" d="M0,96L48,112C96,128,192,160,288,160C384,160,480,128,576,112C672,96,768,96,864,112C960,128,1056,160,1152,160C1248,160,1344,128,1392,112L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
-    </svg>
 
-    <div class="container">
-        <div class="row g-4">
-            
-            <div class="col-lg-4 col-md-6">
-                <a href="#" class="footer-brand"><i class="fas fa-heartbeat text-primary"></i> Bhakti Vedant</a>
-                <p class="footer-desc">Providing world-class healthcare with a focus on patient safety and comfort. Our team of experts is here for you 24/7.</p>
-                <div class="social-icons mt-4">
-                    <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
-
-            <div class="col-lg-2 col-md-6">
-                <h5 class="footer-title">Quick Links</h5>
-                <ul class="footer-links">
-                    <li><a href="about.html"><i class="fas fa-chevron-right"></i> About Us</a></li>
-                    <li><a href="services.html"><i class="fas fa-chevron-right"></i> Services</a></li>
-                    <li><a href="doctors.html"><i class="fas fa-chevron-right"></i> Our Doctors</a></li>
-                    <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact</a></li>
-                    <li><a href="#"><i class="fas fa-chevron-right"></i> Privacy Policy</a></li>
-                </ul>
-            </div>
-
-            <div class="col-lg-3 col-md-6">
-                <h5 class="footer-title">Contact Us</h5>
-                <div class="contact-li">
-                    <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
-                    <div>
-                        <strong class="text-white d-block">Address:</strong>
-                        123 Medical Line, Health City, State
+    <footer class="mega-footer">
+        <svg class="footer-wave" viewBox="0 0 1440 320">
+            <path fill-opacity="1" d="M0,96L48,112C96,128,192,160,288,160C384,160,480,128,576,112C672,96,768,96,864,112C960,128,1056,160,1152,160C1248,160,1344,128,1392,112L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+        </svg>
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
+                    <a href="#" class="footer-brand"><i class="fas fa-heartbeat text-primary"></i> BhaktiVedant</a>
+                    <p class="footer-desc">Providing world-class healthcare with a focus on patient safety and comfort. Our team of experts is here for you 24/7.</p>
+                    <div class="mt-4">
+                        <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="contact-li">
-                    <div class="contact-icon"><i class="fas fa-phone-alt"></i></div>
-                    <div>
-                        <strong class="text-white d-block">Phone:</strong>
-                        +91 123 456 7890
+                <div class="col-lg-2 col-md-6">
+                    <h5 class="footer-title">Quick Links</h5>
+                    <ul class="footer-links">
+                        <li><a href="about.html"><i class="fas fa-chevron-right"></i> About Us</a></li>
+                        <li><a href="services.html"><i class="fas fa-chevron-right"></i> Services</a></li>
+                        <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact</a></li>
+                        <li><a href="#"><i class="fas fa-chevron-right"></i> Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="footer-title">Contact Us</h5>
+                    <div class="contact-li">
+                        <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
+                        <div><strong class="text-white d-block">Address:</strong> 123 Medical Line, City</div>
+                    </div>
+                    <div class="contact-li">
+                        <div class="contact-icon"><i class="fas fa-phone-alt"></i></div>
+                        <div><strong class="text-white d-block">Phone:</strong> +91 123 456 7890</div>
+                    </div>
+                    <div class="contact-li">
+                        <div class="contact-icon"><i class="fas fa-envelope"></i></div>
+                        <div><strong class="text-white d-block">Email:</strong> info@BhaktiVedant.com</div>
                     </div>
                 </div>
-                <div class="contact-li">
-                    <div class="contact-icon"><i class="fas fa-envelope"></i></div>
-                    <div>
-                        <strong class="text-white d-block">Email:</strong>
-                        info@Bhakti Vedanthospital.com
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="footer-title">Newsletter</h5>
+                    <p>Subscribe to get the latest health tips.</p>
+                    <div class="position-relative mt-3">
+                        <input type="email" class="form-control newsletter-input" placeholder="Your Email">
+                        <button class="newsletter-btn"><i class="fas fa-paper-plane"></i></button>
                     </div>
                 </div>
             </div>
-
-            <div class="col-lg-3 col-md-6">
-                <h5 class="footer-title">Newsletter</h5>
-                <p>Subscribe to get the latest health tips and hospital news.</p>
-                <div class="newsletter-box">
-                    <input type="email" class="form-control newsletter-input" placeholder="Your Email">
-                    <button class="newsletter-btn"><i class="fas fa-paper-plane"></i></button>
+            <div class="copyright-area">
+                <div class="row">
+                    <div class="col-md-6 text-md-start">&copy; 2025 BhaktiVedant Hospital. All Rights Reserved.</div>
+                    <div class="col-md-6 text-md-end">Designed for Excellence.</div>
                 </div>
             </div>
         </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-        <div class="copyright-area">
-            <div class="row">
-                <div class="col-md-6 text-md-start">
-                    &copy; 2025 Bhakti Vedant Hospital. All Rights Reserved.
-                </div>
-                <div class="col-md-6 text-md-end">
-                    Designed for Excellence.
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
 <script>
     // 1. Auto-close mobile menu when a link is clicked
     const navLinks = document.querySelectorAll('.nav-item .nav-link');
@@ -510,5 +493,7 @@
         });
     });
 </script>
+
+
 </body>
 </html>
