--- a/facility.html
+++ b/facility.html
@@ -183,43 +183,43 @@
         <div class="row g-3">
             <div class="col-md-4 col-sm-6">
                 <div class="gallery-item">
-                    <img src="/images/celebration.jpg" alt="Reception">
+                    <img src="celebration.jpg" alt="Reception">
                     <div class="gallery-overlay"><span class="gallery-text"></span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div class="gallery-item">
-                    <img src="/images/celebration2.jpeg" alt="Emergency">
+                    <img src="celebration2.jpeg" alt="Emergency">
                     <div class="gallery-overlay"><span class="gallery-text"></span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div class="gallery-item">
-                    <img src="/images/in1.jpeg" alt="Lab">
+                    <img src="in1.jpeg" alt="Lab">
                     <div class="gallery-overlay"><span class="gallery-text"></span></div>
                 </div>
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="gallery-item">
-                    <img src="/images/out1.jpeg" alt="OT">
+                    <img src="out1.jpeg" alt="OT">
                     <div class="gallery-overlay"><span class="gallery-text"></span></div>
                 </div>
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="gallery-item">
-                    <img src="/images/out2.jpeg" alt="Ward">
+                    <img src="out2.jpeg" alt="Ward">
                     <div class="gallery-overlay"><span class="gallery-text"></span></div>
                 </div>
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="gallery-item">
-                    <img src="/images/services.jpeg"  alt="Ward">
+                    <img src="services.jpeg"  alt="Ward">
                     <div class="gallery-overlay"><span class="gallery-text"></span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div class="gallery-item">
-                    <img src="/images/side.jpeg" alt="Reception">
+                    <img src="side.jpeg" alt="Reception">
                     <div class="gallery-overlay"><span class="gallery-text"></span></div>
                 </div>
             </div>
