--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="/images/profile.jpeg" class="director-img shadow" alt="Director">
+                    <img src="profile.jpeg" class="director-img shadow" alt="Director">
                 </div>
                 <div class="col-lg-8">
                     <div class="director-card">
