--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         
         <div class="carousel-item active">
             <div class="hero-overlay"></div>
-            <img src="https://images.unsplash.com/photo-1516549655169-df83a0774514?auto=format&fit=crop&q=80&w=1600" alt="Medical Team">
+            <img src="out2.jpeg" alt="Medical Team">
             <div class="carousel-caption">
                 <div class="container">
                     <span class="slider-subtitle fade-down">Welcome to Bhakti Vedant</span>
@@ -104,7 +104,7 @@
 
         <div class="carousel-item">
             <div class="hero-overlay"></div>
-            <img src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?auto=format&fit=crop&q=80&w=1600" alt="Emergency Ward">
+            <img src="celebration2.jpeg" alt="Emergency Ward">
             <div class="carousel-caption">
                 <div class="container">
                     <span class="slider-subtitle">24/7 Support</span>
@@ -119,7 +119,7 @@
 
         <div class="carousel-item">
             <div class="hero-overlay"></div>
-            <img src="https://images.unsplash.com/photo-1579684385127-1ef15d508118?auto=format&fit=crop&q=80&w=1600" alt="Laboratory">
+            <img src="celebration.jpg" alt="Laboratory">
             <div class="carousel-caption">
                 <div class="container">
                     <span class="slider-subtitle">Advanced Technology</span>
