--- a/facility.html
+++ b/facility.html
@@ -233,28 +233,38 @@
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
-                    <a href="#" class="navbar-brand text-white mb-3"><i class="fas fa-heartbeat text-primary me-2"></i> BhaktiVedant</a>
-                    <p>Providing world-class healthcare with a focus on patient safety and comfort. Our team of experts is here for you 24/7.</p>
+                    <a href="#" class="footer-brand"><i class="fas fa-heartbeat text-primary"></i> BhaktiVedant</a>
+                    <p class="footer-desc">Providing world-class healthcare with a focus on patient safety and comfort. Our team of experts is here for you 24/7.</p>
                     <div class="mt-4">
                         <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6">
                     <h5 class="footer-title">Quick Links</h5>
-                    <div class="footer-links">
-                        <a href="about.html">About Us</a>
-                        <a href="services.html">Services</a>
-                        <a href="gallery.html">Facilities</a>
-                        <a href="contact.html">Contact</a>
-                    </div>
+                    <ul class="footer-links">
+                        <li><a href="about.html"><i class="fas fa-chevron-right"></i> About Us</a></li>
+                        <li><a href="services.html"><i class="fas fa-chevron-right"></i> Services</a></li>
+                        <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact</a></li>
+                        <li><a href="privary.html"><i class="fas fa-chevron-right"></i> Privacy Policy</a></li>
+                    </ul>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="footer-title">Contact Us</h5>
-                    <p class="mb-2 text-white"><i class="fas fa-map-marker-alt text-primary me-2"></i> 123 Health City, Main Road</p>
-                    <p class="mb-2 text-white"><i class="fas fa-phone text-primary me-2"></i> +91 123 456 7890</p>
-                    <p class="mb-2 text-white"><i class="fas fa-envelope text-primary me-2"></i> info@BhaktiVedant.com</p>
+                    <div class="contact-li">
+                        <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
+                        <div><strong class="text-white d-block">Address:</strong> 123 Medical Line, City</div>
+                    </div>
+                    <div class="contact-li">
+                        <div class="contact-icon"><i class="fas fa-phone-alt"></i></div>
+                        <div><strong class="text-white d-block">Phone:</strong> +91 123 456 7890</div>
+                    </div>
+                    <div class="contact-li">
+                        <div class="contact-icon"><i class="fas fa-envelope"></i></div>
+                        <div><strong class="text-white d-block">Email:</strong> info@BhaktiVedant.com</div>
+                    </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="footer-title">Newsletter</h5>
@@ -273,6 +283,14 @@
             </div>
         </div>
     </footer>
+
+
+    
+    <a href="https://wa.me/918380843242" class="whatsapp-float" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</a>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
