--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="facility-box">
                     <div class="badge-247"><div class="pulse-dot"></div> 24 Hours</div>
-                    <img src="https://images.unsplash.com/photo-1584515933487-9bdb7f2cde98?auto=format&fit=crop&q=80&w=600" class="facility-img" alt="X-Ray">
+                    <img src="https://plus.unsplash.com/premium_photo-1673953509955-fdf77b35567d?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="facility-img" alt="X-Ray">
                     <div class="facility-overlay">
                         <i class="fas fa-x-ray facility-icon"></i>
                         <h4 class="facility-title">Digital X-Ray</h4>
@@ -313,7 +313,7 @@
 
             <div class="col-lg-3 col-md-6">
                 <div class="facility-box">
-                    <img src="https://images.unsplash.com/photo-1538108149393-fbbd81895907?auto=format&fit=crop&q=80&w=600" class="facility-img" alt="Wards">
+                    <img src="https://images.unsplash.com/photo-1519494140681-8b17d830a3e9?q=80&w=1174&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="facility-img" alt="Wards">
                     <div class="facility-overlay">
                         <i class="fas fa-bed facility-icon"></i>
                         <h4 class="facility-title">Special Wards</h4>
@@ -325,7 +325,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="facility-box">
                     <div class="badge-247"><div class="pulse-dot"></div> Open Now</div>
-                    <img src="https://images.unsplash.com/photo-1585435557343-3b092031a831?auto=format&fit=crop&q=80&w=600" class="facility-img" alt="Pharmacy">
+                    <img src="https://5.imimg.com/data5/SELLER/Default/2023/3/291909794/XW/LL/RX/185669753/medical-store-display-racks.jpg" class="facility-img" alt="Pharmacy">
                     <div class="facility-overlay">
                         <i class="fas fa-pills facility-icon"></i>
                         <h4 class="facility-title">Pharmacy</h4>
@@ -421,7 +421,7 @@
                         <li><a href="about.html"><i class="fas fa-chevron-right"></i> About Us</a></li>
                         <li><a href="services.html"><i class="fas fa-chevron-right"></i> Services</a></li>
                         <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Privacy Policy</a></li>
+                        <li><a href="privary.html"><i class="fas fa-chevron-right"></i> Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -458,6 +458,10 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
+
+    <a href="https://wa.me/918380843242" class="whatsapp-float" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</a>
 <script>
     // 1. Auto-close mobile menu when a link is clicked
     const navLinks = document.querySelectorAll('.nav-item .nav-link');
