--- a/contact.html
+++ b/contact.html
@@ -224,35 +224,45 @@
         </div>
     </section>
 
-    <footer class="mega-footer">
+  <footer class="mega-footer">
         <svg class="footer-wave" viewBox="0 0 1440 320">
             <path fill-opacity="1" d="M0,96L48,112C96,128,192,160,288,160C384,160,480,128,576,112C672,96,768,96,864,112C960,128,1056,160,1152,160C1248,160,1344,128,1392,112L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
         </svg>
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
-                    <a href="#" class="navbar-brand text-white mb-3"><i class="fas fa-heartbeat text-primary me-2"></i> BhaktiVedant</a>
-                    <p>Providing world-class healthcare with a focus on patient safety and comfort. Our team of experts is here for you 24/7.</p>
+                    <a href="#" class="footer-brand"><i class="fas fa-heartbeat text-primary"></i> BhaktiVedant</a>
+                    <p class="footer-desc">Providing world-class healthcare with a focus on patient safety and comfort. Our team of experts is here for you 24/7.</p>
                     <div class="mt-4">
                         <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6">
                     <h5 class="footer-title">Quick Links</h5>
-                    <div class="footer-links">
-                        <a href="about.html">About Us</a>
-                        <a href="services.html">Services</a>
-                        <a href="gallery.html">Facilities</a>
-                        <a href="contact.html">Contact</a>
-                    </div>
+                    <ul class="footer-links">
+                        <li><a href="about.html"><i class="fas fa-chevron-right"></i> About Us</a></li>
+                        <li><a href="services.html"><i class="fas fa-chevron-right"></i> Services</a></li>
+                        <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact</a></li>
+                        <li><a href="privary.html"><i class="fas fa-chevron-right"></i> Privacy Policy</a></li>
+                    </ul>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="footer-title">Contact Us</h5>
-                    <p class="mb-2 text-white"><i class="fas fa-map-marker-alt text-primary me-2"></i> 123 Health City, Main Road</p>
-                    <p class="mb-2 text-white"><i class="fas fa-phone text-primary me-2"></i> +91 123 456 7890</p>
-                    <p class="mb-2 text-white"><i class="fas fa-envelope text-primary me-2"></i> info@BhaktiVedant.com</p>
+                    <div class="contact-li">
+                        <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
+                        <div><strong class="text-white d-block">Address:</strong> 123 Medical Line, City</div>
+                    </div>
+                    <div class="contact-li">
+                        <div class="contact-icon"><i class="fas fa-phone-alt"></i></div>
+                        <div><strong class="text-white d-block">Phone:</strong> +91 123 456 7890</div>
+                    </div>
+                    <div class="contact-li">
+                        <div class="contact-icon"><i class="fas fa-envelope"></i></div>
+                        <div><strong class="text-white d-block">Email:</strong> info@BhaktiVedant.com</div>
+                    </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="footer-title">Newsletter</h5>
@@ -271,7 +281,15 @@
             </div>
         </div>
     </footer>
+
+
     
+    <a href="https://wa.me/918380843242" class="whatsapp-float" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</a>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         const navLinks = document.querySelectorAll('.nav-item .nav-link');
