--- a/services.html
+++ b/services.html
@@ -271,7 +271,7 @@
                         <li><a href="about.html"><i class="fas fa-chevron-right"></i> About Us</a></li>
                         <li><a href="services.html"><i class="fas fa-chevron-right"></i> Services</a></li>
                         <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Privacy Policy</a></li>
+                        <li><a href="privary.html"><i class="fas fa-chevron-right"></i> Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -306,6 +306,12 @@
             </div>
         </div>
     </footer>
+
+
+    
+    <a href="https://wa.me/918380843242" class="whatsapp-float" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // Auto-close mobile menu on click
